# car_t_platform

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  docker-compose.yml  figma_prompt_04062026.md
docs/: CLAUDE.md
infra/grafana/provisioning/datasources/: default.yml
services/api/: Dockerfile  audit.py  auth.py  clinical_trials.py  database.py  main.py  model_registry.py  models.py  requirements.txt  telemetry.py
services/frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  server.js
services/frontend/src/: App.tsx  index.css
services/frontend/src/data/: mock.ts
services/frontend/src/hooks/: useApi.ts
services/frontend/src/pages/: AccessGatePage.tsx  AuditTrailPage.tsx  CapacityPlanningPage.tsx  CoordinatorHomePage.tsx  DirectorHomePage.tsx  HandoffPage.tsx  LoginPage.tsx  MobileCompanionPage.tsx  PatientQueuePage.tsx  (+3 more)
services/scheduler/: pyproject.toml
services/scheduler/src/bioflow_scheduler/: __init__.py
services/scheduler/src/bioflow_scheduler/duration_model/: __init__.py
services/scheduler/src/bioflow_scheduler/explainer/: __init__.py  shap_explainer.py
services/scheduler/src/bioflow_scheduler/mdp/: __init__.py  schemas.py
services/scheduler/src/bioflow_scheduler/policy/: __init__.py  evaluate.py  ppo_agent.py
services/scheduler/src/bioflow_scheduler/simulator/: __init__.py  environment.py  gymnasium_env.py  heuristics.py  scenarios.py  stress_test.py
services/scheduler/tests/: test_mdp_schemas.py  test_simulator.py
training/configs/: ppo_mvp.json  ppo_phase5.json
training/scripts/: stress_test.py  train.py
(+7 files in other folders)
