[project]
name = "bioflow-scheduler"
version = "0.1.0"
description = "RL-based scheduling engine for autologous CAR-T cell therapy manufacturing"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "simpy>=4.0,<5.0",
    "gymnasium>=0.29,<1.0",
    "stable-baselines3>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "scipy>=1.11,<2.0",
    "sb3-contrib>=2.0,<3.0",
    "shap>=0.43,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
